--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-   "name": "jquery-plugin-object-oriented-lumbar",
+   "name": "jQuery paprcolumns",
    "version": "0.0.0-ignored",
    "engines": {
       "node": ">= 0.10.0"
    },
    "scripts": {
       "test": "grunt travis --verbose"
-   },
-   "dependencies": {
-       "jQuery": "~1.10"
    },
    "devDependencies": {
       "grunt-contrib-jshint": "~0.6.0",
