grunt was not installing properly
All docs that I found about this issue basically said we shouldn't have to
add this before_script here, but without it travis is complaining that
grunt is not found even though grunt isin our devDependencies and npm install
on travis seems to work correctly

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
    "description": "jQuery plugin for breaking content into columns like a newspaper.",
    "version": "0.1.0",
    "homepage": "https://github.com/silvermine/paprcolumns",
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/silvermine/paprcolumns"
+   },
    "engines": {
       "node": ">= 0.10.0"
    },
